<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"/>

    <EditText
        android:id="@+id/passwords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_name"/>

    <EditText
        android:id="@+id/emails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_user"/>

    <EditText
        android:id="@+id/genders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender_type"/>

    <Button
        android:id="@+id/submit_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button1"/>
</LinearLayout>